# mzcode

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  analysis_potential_sql_patterns.py  analyze_parser_logic.py  bug-report.md  check_column_transformations.py  check_operation_sql.py  comprehensive_sql_parsing_analysis.md  create_robust_sql_parser.py  debug_final_extraction.py  debug_join_issue.py  debug_property_extraction.py  debug_sql_extraction.py  demo_migration_integration.py  docker-compose.yml  enhanced_graph_full_analysis.json  final_sql_parser.py  find_product_operations.py  informatica_enhanced_graph_full_analysis.json  informatica_enriched_test.json  informatica_memgraph_test.json  informatica_q4_attribute_fix.json  informatica_q4_fixed.json  informatica_q4_test.json  informatica_sql_test.json  informatica_with_sql_semantics.json  investigate_operations.py  migration_impact_analysis.py  production_ready_parser.py  pyproject.toml  query_categories.py  simple_working_parser.py  sql_semantics_parser_prototype.py  ssis_northwind_analysis.json  super_simple_parser.py  (+15 more)
archive/: IMPLEMENTATION_SUMMARY.md  PRD.md  complexity_estimation.md  tasks.md
data/: data.md
data/ssis/SSIS_GBook/: 01_Dim_customer.dtsx  03_Dim_ShippingMethod.dtsx  (+2 more)
docs/: analytics-ready-architecture.md  backend-comparison.md  concrete-use-cases.md  informatica-parser-implementation-summary.md  metazcode-architecture-deep-dive.md
docs/oracle-etl-sample-project/: assignment-plsql-etl-extension.md  github-oracle-etl-projects.md
metazcode/: __init__.py  __main__.py
metazcode/cli/: commands.py  orchestrator.py
metazcode/sdk/: __init__.py
scripts/: init_memgraph.cypher
(+88 files in other folders)
